Mobile fixes
Overflow hidden to fix horizontal scrolling issue on mobile
Dropdown menu movement fixed by removing padding in main menu

--- a/css/_general.scss
+++ b/css/_general.scss
@@ -10,6 +10,7 @@
 
 html, body {
   background: $dark-grey;
+  overflow-x: hidden;
 }
 
 html {
