--- a/css/_header.scss
+++ b/css/_header.scss
@@ -8,10 +8,6 @@
   }
 }
 
-.collapse {
-
-  padding-left: 0;
-}
 
 #menu-header-main-menu {
   margin-bottom: 0;
